// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrafficEventTable should match snapshot 1`] = `
<Fragment>
  <Component>
    Hits By Resource
  </Component>
  <p
    className="is-italic mb-4"
  >
    A breakdown of the endpoints that your application(s) have sent requests to (grouped by resource)
  </p>
  <Component
    bordered={true}
    columns={
      Array [
        Object {
          "Footer": "Total",
          "Header": "Resource",
          "accessor": "endpoint",
          "columnProps": Object {
            "className": "capitalize",
          },
        },
        Object {
          "Footer": [Function],
          "Header": "Hits",
          "accessor": "requestCount",
        },
      ]
    }
    data={
      Array [
        Object {
          "endpoint": "properties",
          "requestCount": 90,
        },
        Object {
          "endpoint": "propertyImages",
          "requestCount": 88,
        },
      ]
    }
    maxHeight={450}
    scrollable={true}
  />
</Fragment>
`;

exports[`TrafficEventTable should match snapshot if data is empty 1`] = `
<Fragment>
  <Component>
    Hits By Resource
  </Component>
  <p
    className="is-italic mb-4"
  >
    A breakdown of the endpoints that your application(s) have sent requests to (grouped by resource)
  </p>
  <Component
    bordered={true}
    columns={
      Array [
        Object {
          "Footer": "Total",
          "Header": "Resource",
          "accessor": "endpoint",
          "columnProps": Object {
            "className": "capitalize",
          },
        },
        Object {
          "Footer": [Function],
          "Header": "Hits",
          "accessor": "requestCount",
        },
      ]
    }
    data={Array []}
    maxHeight={450}
    scrollable={true}
  />
</Fragment>
`;

exports[`TrafficEventTable should match snapshot when loading 1`] = `
<Fragment>
  <Component>
    Hits By Resource
  </Component>
  <p
    className="is-italic mb-4"
  >
    A breakdown of the endpoints that your application(s) have sent requests to (grouped by resource)
  </p>
  <Component
    bordered={true}
    columns={
      Array [
        Object {
          "Footer": "Total",
          "Header": "Resource",
          "accessor": "endpoint",
          "columnProps": Object {
            "className": "capitalize",
          },
        },
        Object {
          "Footer": [Function],
          "Header": "Hits",
          "accessor": "requestCount",
        },
      ]
    }
    data={
      Array [
        Object {
          "endpoint": "properties",
          "requestCount": 90,
        },
        Object {
          "endpoint": "propertyImages",
          "requestCount": 88,
        },
      ]
    }
    loading={true}
    maxHeight={450}
    scrollable={true}
  />
</Fragment>
`;
